sidebar and collapse fix

--- a/src/components/Sidebar/Sidebar.scss
+++ b/src/components/Sidebar/Sidebar.scss
@@ -8,6 +8,24 @@ $red: #FF3C00;
 $orange: #E38968;
 $text:#434651;
 
+@mixin scrollbar {
+  &::-webkit-scrollbar-track{
+      display: none!important;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3)!important;
+      box-shadow: inset 0 0 6px rgba(0,0,0,0.3)!important;
+      border-radius: 10px !important;
+  }
+  &::-webkit-scrollbar {
+      width: 7px !important;
+  }
+  &::-webkit-scrollbar-thumb {
+      border-radius: 10px !important;
+      -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,.3) !important;
+      box-shadow: inset 0 0 6px rgba(0,0,0,.3) !important;
+      background-color: #8a8a8a !important;
+  }
+}
+
 .sidebar {
   background-color: $backgroundColor;
   height: 100vh;
@@ -105,10 +123,10 @@ $text:#434651;
       color: gold;
     }
 
-    .flexWrapper {
+    /*.flexWrapper {
       display: flex;
       align-items: center;
-    }
+    }*/
 
     .fa-plus {
       color: white;
@@ -141,8 +159,6 @@ hr {
   margin-left: 10px;
 }
 
-
-
 @media (min-width:768px){
   .btn-showChat{
     display:none;
@@ -151,14 +167,11 @@ hr {
 
 .contactsCollapse{
   background: $backgroundColor;
-  border:none;
-  -moz-box-shadow:    inset 0 0 8px #000000;
-  -webkit-box-shadow: inset 0 0 8px #000000;
-  box-shadow:         inset 1px 1px 8px 1px #000000;
-  height: 250px;
-  overflow-y:scroll;
-  margin-bottom:0px;
- 
+  height: 190px;
+  .card-body {
+    overflow-y: auto;
+    @include scrollbar;
+  }
 
   @media (max-width:768px){
     &{
